--- a/app/src/main/res/layout/single_activity.xml
+++ b/app/src/main/res/layout/single_activity.xml
@@ -47,6 +47,12 @@
                 android:text="Alamat     :"
                 android:layout_weight="1"/>
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Jarak     :"
+                android:layout_weight="1"/>
+
         </LinearLayout>
 
 
@@ -76,6 +82,13 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/txtAlamat"
                 android:text="Alamat"
+                android:layout_weight="1"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/txtJarak"
+                android:text="Jarak"
                 android:layout_weight="1"/>
 
         </LinearLayout>
